Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60014

qtdeclarative examples compile failure without widgets module

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.0 Beta 2
    • 5.8.0
    • None
    • Host: openSUSE 13.2 x86_64
      Target: cortex-a8
      Buildsystem: Buildroot
    • 495f8f12ec17ece5708407ef09ece89887ea73bc

      qtdeclarative compile failes in case no Qt wigets module is available (see [1] for details):

      .../qt5declarative-5.8.0/examples/quick/demos/photoviewer/photoviewer.pro
      Project ERROR: Unknown module(s) in QT: widgets

      [1] http://lists.busybox.net/pipermail/buildroot/2017-April/188769.html

        For Gerrit Dashboard: QTBUG-60014
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            p_seiderer Peter Seiderer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes