photoviewer example: don't depend on widgets

It was never necessary for this example.
This reverts commit 452a78d0ac4a1579733a8ab641be24c9b7c0dd96.

Task-number: QTBUG-60014
Change-Id: Ib3f30d1d5de21d567919aa650bf3334247d5f271
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>